# cascolor

./: .dockerignore  .gitignore  .gitignore.tmp  AI.md  Cargo.toml  LICENSE.md  Makefile  README.md  TODO.AI.md
.gitea/workflows/: .gitkeep  beta.yml  daily.yml  release.yml
.github/workflows/: beta.yml  daily.yml  release.yml
scripts/: install.sh  linux.sh  macos.sh  windows.cmd  windows.ps1
src/: clipboard.rs  lib.rs  main.rs  update.rs  version.rs
src/color/: mod.rs
src/config/: mod.rs
src/gui/: mod.rs
src/tui/: app.rs  mod.rs  ui.rs
tests/: color_tests.rs  config_tests.rs  integration_tests.rs  test_runner.sh
