[package]
name = "cascolor"
version = "0.1.0"
edition = "2021"
authors = ["casapps"]
license = "MIT"
description = "Beautiful cross-platform color picker with GUI and TUI support"
repository = "https://github.com/casapps/cascolor"
keywords = ["color", "picker", "gui", "tui", "cross-platform"]
categories = ["command-line-utilities", "graphics"]

[dependencies]
# Core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = "0.4"
semver = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

# Color handling
palette = "0.7"

# Clipboard
arboard = "3"
xcap = "0.0.9"

# Auto-update
self_update = { version = "0.41", default-features = false, features = ["archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate", "rustls"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# GUI
iced = { version = "0.13", features = ["tokio", "advanced"] }
screenshots = "0.6"
image = "0.25"
tray-icon = "0.18"

# TUI
ratatui = "0.29"
crossterm = "0.28"

[build-dependencies]
built = { version = "0.7", features = ["chrono", "git2"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
